<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:onClick="clearCanvas"
        android:text="@string/clear_canvas" />

    <Button
        android:id="@+id/settingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:onClick="openSettings"
        android:text="@string/settings" />


    <Button
        android:id="@+id/saveImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:onClick="saveImage"
        android:text="@string/save_image" />
    <Button
        android:id="@+id/createCirlceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:onClick="makeCircle"
        android:text="@string/circle_button" />
    <Button
        android:id="@+id/undoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:onClick="undo"
        android:text="@string/undo" />

    <Button
        android:id="@+id/randomizeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:onClick="randomizeColors"
        android:text="@string/randomize" />

    <com.example.christianmoore.androidpaint.CanvasView
        android:id="@+id/signature_canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/SettingsMenu"
        android:layout_width="300dp"
        android:layout_height="419dp"
        android:layout_gravity="center|center"
        android:background="@color/colorPrimary"
        android:onClick="openSettings"
        android:orientation="vertical"
        android:visibility="invisible">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/LblBrshSize"
                android:textSize="16sp" />

            <Button
                android:id="@+id/SizeUp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:onClick="btnBrushSizeClicked"
                android:text="@string/plus" />

            <Button
                android:id="@+id/SizeDown"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="-55dp"
                android:layout_row="0"
                android:onClick="btnBrushSizeClicked"
                android:text="@string/minus" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="4"
                android:onClick="saveSettingsClicked"
                android:text="@string/save" />


            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/brushColor" />

            <RadioGroup
                android:id="@+id/ColorBrushRG"
                android:layout_width="288dp"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:layout_row="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RBtnBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBlack"
                    android:checked="true"
                    android:textColor="@color/colorBlack" />

                <RadioButton
                    android:id="@+id/RBtnRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRed"
                    android:textColor="@color/colorRed" />

                <RadioButton
                    android:id="@+id/RBtnGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGreen"
                    android:textColor="@color/colorGreen" />

                <RadioButton
                    android:id="@+id/RBtnBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBlue"
                    android:textColor="@color/colorBlue" />

                <RadioButton
                    android:id="@+id/RBtnAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorAccent" />
            </RadioGroup>

            <TextView
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/LblCanvasColor"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/ColorCanvasRG"
                android:layout_width="288dp"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RBtnBlackCanvas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBlack"
                    android:textColor="@color/colorBlack" />

                <RadioButton
                    android:id="@+id/RBtnRedCanvas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRed"
                    android:textColor="@color/colorRed" />

                <RadioButton
                    android:id="@+id/RBtnGreenCanvas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGreen"
                    android:textColor="@color/colorGreen" />

                <RadioButton
                    android:id="@+id/RBtnWhiteCanvas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:checked="true"
                    android:textColor="@color/colorWhite" />
            </RadioGroup>


            <TextView
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/pathStyle" />

            <RadioGroup
                android:id="@+id/pathEffectRadioButtonGroup"
                android:layout_column="1"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/dashedButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dashedPath" />

                <RadioButton
                    android:id="@+id/regualarButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="10dp"
                    android:text="@string/normalPath" />
            </RadioGroup>
        </GridLayout>
    </LinearLayout>
</FrameLayout>